fixed some PR comments